--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "pagarme": "^4.15.3",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsconfig-paths": "^3.9.0",
