--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "celebrate": "^13.0.4",
     "class-transformer": "^0.3.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.20.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
